# fusionbench

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_HF_SPACE.md  app.py  pyproject.toml  requirements.txt
.claude/handoffs/: CHANGELOG.md  phase3-visual.md  phase4-leaderboard.md  phase5-hf-space.md
.github/workflows/: ci.yml  pages.yml  submit.yml
data/: frames_sample.jsonl  sample_tasks.jsonl
docs/: DEPLOY.md  PROPOSAL-community-v2.md
docs/superpowers/plans/: 2026-06-14-phase2-integrity.md  2026-06-15-phase3-stage2-explorer.md  2026-06-15-phase3-visual-v2.md  (+2 more)
examples/: data.json  leaderboard.json
scripts/: build_catalog.py  check_setup.py  decrypt_gold.py  deploy_space.py  dump_gold.py  encrypt_gold.py  publish_datasets.py  regrade.py  run_search.py  run_v0.py  score_contributions.py  site_tokens.py  validate_manifest.py
site/: app.js  leaderboard.js
src/fusionbench/: __init__.py  budget.py  catalog.py  client.py  complementarity.py  config.py  crypto.py  gold.py  judge.py  presets.py  runs.py  scoring.py  search.py  solvers.py
submissions/: README.md
tests/: site_logic.test.mjs  test_budget.py  test_build_data.py  test_complementarity.py  test_constraint_serde.py  test_crypto.py  test_gold.py  test_grading.py  test_outputs.py  test_publish_datasets.py  test_registry.py  test_regrade.py  test_score_contributions.py  test_scoring.py  test_search.py  test_submit_workflow.py  test_webui_data_loader.py  test_webui_export.py  test_webui_transform.py
webui/: data_loader.py  export.py  transform.py
(+26 files in other folders)
