[project]
name = "fusionbench"
version = "0.0.1"
description = "When is multi-model fusion actually worth it? A cost-aware harness + per-task-type recipe catalog."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",        # only used by the real OpenRouter client; mock mode needs nothing
    "python-dotenv>=1.0",
    "cryptography>=42.0", # Fernet encryption for the held-out gold file (Phase 2)
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# v1 scale-out: wrap the arms as Inspect solvers for parallelism + logging.
inspect = ["inspect-ai>=0.3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
